--- a/apps/Manager/views/projects/create.phtml
+++ b/apps/Manager/views/projects/create.phtml
@@ -40,9 +40,8 @@
 
                 <div class="col-md-3">
                   <label class="control-label">Deadline</label>
-                  <div class="form-group has-feedback input-group date" id="datepicker">
+                  <div class="form-group has-feedback">
                     <?php echo $form->render("deadline"); ?>
-                    <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
                   </div>
                 </div>
 
