--- a/apps/Manager/views/projects/modify.phtml
+++ b/apps/Manager/views/projects/modify.phtml
@@ -138,7 +138,7 @@
         <div class="col-lg-12 col-md-12">
           <div class="panel panel-default">
             <div class="panel-heading space-between">
-              &nbsp;
+              <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search style="margin-right:15px" />
               <button type="button" class="btn btn-default btn-sm" data-toggle="modal" data-target="#addTask" >
                 <span class="fa fa-plus"></span> Adicionar Tarefa
               </button>
@@ -174,7 +174,7 @@
                           <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#taskInfo-<?php echo $task->_; ?>">
                             <span class="fa fa-info-circle"></span>
                           </button>
-                          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#editTask">
+                          <button type="button" class="btn btn-info" data-toggle="modal" data-target="#editTask-<?php echo $task->_; ?>">
                             <span class="fa fa-pencil"></span>
                           </button>
                           <button type="submit" class="btn btn-danger">
@@ -186,6 +186,14 @@
                   <?php endforeach; ?>
                 </tbody>
               </table>
+          </div>
+        </div>
+      </div>
+
+      <div class="tab-pane" id="settings">
+        <br>
+        <div class="col-lg-12 col-md-12">
+          <div class="panel panel-default">
           </div>
         </div>
       </div>
@@ -324,6 +332,61 @@
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Fechar</button>
         </div>
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="editTask-<?php echo $task->_;?>" tabindex="-1" role="dialog" aria-labelledby="editTask-<?php echo $task->_;?>" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="editTask-<?php echo $task->_;?>">Alterar Informações</h4>
+      </div>
+        <form role="form" method="post" accept-charset="utf8" action="/projects/task/update/<?php echo "{$project->_}/{$task->_}"; ?>" class="validator-form" >
+        <div class="modal-body">
+          <dl class="dl-horizontal">
+            <dt>Título:</dt>
+            <dd>
+              <div class="col-md-12">
+                <div class="form-group has-feedback">
+                  <input type="text" name="title" class="form-control" data-validate data-empty="* Campo Obrigatório" value="<?php echo $task->title; ?>">
+                </div>
+              </div>
+            </dd>
+            <hr>
+            <dt>Deadline:</dt>
+            <dd>
+              <div class="col-md-12">
+                <div class="form-group has-feedback">
+                  <input type="text" name="deadline" class="form-control inputmask" data-inputmask="'alias': 'dd-mm-yyyy'" data-validate data-empty="* Campo Obrigatório" value="<?php echo (new \DateTime($task->created))->format("d-m-Y"); ?>">
+                </div>
+              </div>
+            </dd>
+            <hr>
+            <dt>Designado à</dt>
+            <dd>
+              <div class="col-md-12">
+                <div class="form-group has-feedback">
+                  <?php echo $form->render("members"); ?>
+                </div>
+              </div>
+            </dd>
+            <hr>
+            <dt>Descrição</dt>
+            <dd>
+              <div class="col-md-12">
+                <div class="form-group has-feedback">
+                  <textarea name="description" class="form-control" rows="4" ><?php echo $task->description;?></textarea>
+                </div>
+              </div>
+            </dd>
+          </dl>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Cancelar</button>
+          <button type="submit" class="btn btn-primary">Alterar</button>
+        </div>
+      </form>
     </div>
   </div>
 </div>
