project routes + renaming

--- a/apps/Manager/views/projects/index.phtml
+++ b/apps/Manager/views/projects/index.phtml
@@ -59,7 +59,7 @@
                 </td>
                 <td>
                   <form method="post" class="validator-form" action="/projects/remove/<?php echo $project->_ ;?>" novalidate="novalidate">
-                    <a href="/projects/modify/<?php echo $project->_; ?>">
+                    <a href="/project/overview/<?php echo $project->_; ?>">
                       <button type="button" class="btn btn-info">
                         <span class="fa fa-pencil"></span>
                       </button>
