--- a/apps/Manager/views/index.phtml
+++ b/apps/Manager/views/index.phtml
@@ -23,7 +23,7 @@
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
       <![endif]-->
   </head>
-  <body>
+  <body data-ng-app >
 
     <?php if($this->router->getControllerName() != 'login'): ?>
     <aside class="left-panel">
