--- a/apps/Manager/views/index.phtml
+++ b/apps/Manager/views/index.phtml
@@ -49,11 +49,11 @@
           </li>
 
           <li class="<?php echo ($this->router->getControllerName() === 'tasks' ? 'active' : ''); ?>">
-            <a href="/"><i class="fa fa-check-square-o"></i><span class="nav-label">Tarefas</span></a>
+            <a href="/tasks"><i class="fa fa-check-square-o"></i><span class="nav-label">Tarefas</span></a>
           </li>
 
           <li class="<?php echo ($this->router->getControllerName() === 'tickets' ? 'active' : ''); ?>">
-            <a href="/"><i class="fa fa-ticket"></i><span class="nav-label">Chamados</span></a>
+            <a href="/tickets"><i class="fa fa-ticket"></i><span class="nav-label">Chamados</span></a>
           </li>
 
           <li class="has-submenu <?php echo ($this->router->getControllerName() === 'team' ? 'active' : ''); ?> "><a href="#"><i class="fa fa-users"></i> <span class="nav-label">Equipe</span></a>
