--- a/apps/Manager/views/tasks/index.phtml
+++ b/apps/Manager/views/tasks/index.phtml
@@ -5,6 +5,12 @@
   </div>
 
   <div class="row">
+    <div class="col-md-12">
+      <div class="alert hidden" role="alert">
+        <h4 id="title"></h4>
+        <p id="desc"></p>
+      </div>
+    </div>
     <div class="col-md-10 col-sm-12">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
     </div>
