--- a/apps/Manager/views/projects/overview.phtml
+++ b/apps/Manager/views/projects/overview.phtml
@@ -137,7 +137,7 @@
         <h4 class="modal-title" id="addLabel">Adicionar Membros ao Projeto</h4>
       </div>
 
-      <form role="form" method="post" accept-charset="utf8" action="/projects/member/new/<?php echo $project->_; ?>" class="validator-form" >
+      <form role="form" method="post" accept-charset="utf8" action="/project/member/new/<?php echo $project->_; ?>" class="validator-form" >
         <div class="modal-body">
 
           <?php echo $form->render("security"); ?>
