Fixed assosiation & navigation

--- a/apps/Manager/views/clients/index.phtml
+++ b/apps/Manager/views/clients/index.phtml
@@ -13,6 +13,12 @@
       </div>
     </div>
     <div class="col-md-12">
+      <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-primary" href="/clients/" >Clientes Cadastrados</a>
+        <a role="button" class="btn btn-default" href="/clients/create" >Cadastrar Novo Cliente</a>
+      </div><br>
+    </div>
+    <div class="col-md-12">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
     </div>
   </div>
