--- a/apps/Manager/views/clients/modify.phtml
+++ b/apps/Manager/views/clients/modify.phtml
@@ -12,6 +12,12 @@
           <p id="desc"></p>
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="btn-group btn-group-justified">
+          <a role="button" class="btn btn-default" href="/clients/" >Clientes Cadastrados</a>
+          <a role="button" class="btn btn-default" href="/clients/create" >Cadastrar Novo Cliente</a>
+        </div><br>
+      </div>
     </div>
 
     <form method="post" class="form-horizontal validator-form" action="/clients/update/<?php echo $uid; ?>" accept-charset="utf8" enctype="multipart/form-data" novalidate="novalidate">
