--- a/apps/Manager/views/projects/create.phtml
+++ b/apps/Manager/views/projects/create.phtml
@@ -12,6 +12,12 @@
           <p id="desc"></p>
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="btn-group btn-group-justified">
+          <a role="button" class="btn btn-default" href="/projects/" >Projetos Cadastrados</a>
+          <a role="button" class="btn btn-primary" href="/projects/create" >Cadastrar Novo Projeto</a>
+        </div><br>
+      </div>
     </div>
 
     <div class="tab-content">
