--- a/apps/Manager/views/team/create.phtml
+++ b/apps/Manager/views/team/create.phtml
@@ -12,6 +12,13 @@
           <p id="desc"></p>
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="btn-group btn-group-justified">
+          <a role="button" class="btn btn-default" href="/team/" >Membros Cadastrados</a>
+          <a role="button" class="btn btn-primary" href="/team/create" >Cadastrar Novo Membro</a>
+          <a role="button" class="btn btn-default" href="/team/departments" >Departamentos</a>
+        </div><br>
+      </div>
     </div>
 
     <div class="tab-content">
