--- a/apps/Manager/views/clients/create.phtml
+++ b/apps/Manager/views/clients/create.phtml
@@ -12,6 +12,12 @@
           <p id="desc"></p>
         </div>
       </div>
+      <div class="col-md-12">
+        <div class="btn-group btn-group-justified">
+          <a role="button" class="btn btn-default" href="/clients/" >Clientes Cadastrados</a>
+          <a role="button" class="btn btn-primary" href="/clients/create" >Cadastrar Novo Cliente</a>
+        </div><br>
+      </div>
     </div>
 
     <ul class="nav nav-tabs" role="tablist">
