--- a/apps/Manager/views/projects/index.phtml
+++ b/apps/Manager/views/projects/index.phtml
@@ -11,6 +11,12 @@
         <p id="desc"></p>
       </div>
     </div>
+    <div class="col-md-12">
+      <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-primary" href="/projects/" >Projetos Cadastrados</a>
+        <a role="button" class="btn btn-default" href="/projects/create" >Cadastrar Novo Projeto</a>
+      </div><br>
+    </div>
     <div class="col-md-9 col-sm-12">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
     </div>
