--- a/apps/Manager/views/projects/overview.phtml
+++ b/apps/Manager/views/projects/overview.phtml
@@ -17,6 +17,7 @@
     <div class="panel-body">
 
       <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-default" href="/projects/" >Projetos Cadastrados</a>
         <a role="button" class="btn btn-primary" href="/project/overview/<?php echo $project->_; ?>" >Visão Geral</a>
         <a role="button" class="btn btn-default" href="/project/tasks/<?php echo $project->_; ?>" >Tarefas</a>
         <a role="button" class="btn btn-default" href="/project/settings/<?php echo $project->_; ?>" >Configurações</a>
@@ -78,7 +79,7 @@
                             <span class="label label-default"><?php echo $member->department; ?></span>
                           </td>
                           <td>
-                            <form method="post" class="validator-form" action="/project/member/remove/<?php echo "{$project->_}/{$member->_}" ;?>" novalidate="novalidate">
+                            <form method="post" class="validator-form" action="/project/member/remove/<?php echo "{$project->_}/{$member->uid}" ;?>" novalidate="novalidate">
                               <?php echo $form->render("security"); ?>
                               <button type="submit" class="btn btn-danger pull-right">
                                 <span class="fa fa-close"></span>
