--- a/apps/Manager/views/projects/settings.phtml
+++ b/apps/Manager/views/projects/settings.phtml
@@ -17,6 +17,7 @@
     <div class="panel-body">
 
       <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-default" href="/projects/" >Projetos Cadastrados</a>
         <a role="button" class="btn btn-default" href="/project/overview/<?php echo $project->_; ?>" >Visão Geral</a>
         <a role="button" class="btn btn-default" href="/project/tasks/<?php echo $project->_; ?>" >Tarefas</a>
         <a role="button" class="btn btn-primary" href="/project/settings/<?php echo $project->_; ?>" >Configurações</a>
@@ -24,7 +25,7 @@
         <a role="button" class="btn btn-default" href="/project/invoices/<?php echo $project->_; ?>" >Faturas</a>
       </div>
       <br>
-      
+
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="panel panel-default">
