--- a/apps/Manager/views/projects/tasks.phtml
+++ b/apps/Manager/views/projects/tasks.phtml
@@ -17,6 +17,7 @@
     <div class="panel-body">
 
       <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-default" href="/projects/" >Projetos Cadastrados</a>
         <a role="button" class="btn btn-default" href="/project/overview/<?php echo $project->_; ?>" >Visão Geral</a>
         <a role="button" class="btn btn-primary" href="/project/tasks/<?php echo $project->_; ?>" >Tarefas</a>
         <a role="button" class="btn btn-default" href="/project/settings/<?php echo $project->_; ?>" >Configurações</a>
