--- a/apps/Manager/views/team/departments.phtml
+++ b/apps/Manager/views/team/departments.phtml
@@ -6,6 +6,13 @@
 
   <div class="row">
     <div class="col-md-12">
+      <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-default" href="/team/" >Membros Cadastrados</a>
+        <a role="button" class="btn btn-default" href="/team/create" >Cadastrar Novo Membro</a>
+        <a role="button" class="btn btn-primary" href="/team/departments" >Departamentos</a>
+      </div><br>
+    </div>
+    <div class="col-md-12">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
     </div>
   </div>
