--- a/apps/Manager/views/team/index.phtml
+++ b/apps/Manager/views/team/index.phtml
@@ -6,10 +6,19 @@
 
   <div class="row">
     <div class="col-md-12">
-      <div class="alert alert-info" role="alert">
-        <h4 id="title">Don't Forget</h4>
-        <p id="desc">Fix remove funcion !</p>
+      <div role="alert" class="alert fade in hidden">
+        <button data-dismiss="alert" class="close" type="button"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
+        <h4 id="title"></h4>
+        <p id="desc"></p>
       </div>
+    </div>
+
+    <div class="col-md-12">
+      <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-primary" href="/team/" >Membros Cadastrados</a>
+        <a role="button" class="btn btn-default" href="/team/create" >Cadastrar Novo Membro</a>
+        <a role="button" class="btn btn-default" href="/team/departments" >Departamentos</a>
+      </div><br>
     </div>
     <div class="col-md-12">
       <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
@@ -19,6 +28,7 @@
   <hr class="dotted">
 
   <div class="panel panel-default">
+
     <table class="table table-striped no-margn">
         <thead>
           <tr>
@@ -44,7 +54,7 @@
                       <span class="fa fa-pencil"></span>
                     </button>
                   </a>
-                  <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm" data-form-action="/team/remove/<?php echo $member->_ ;?>">
+                  <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#confirm" data-form-action="/team/remove/<?php echo $member->uid ;?>">
                     <span class="fa fa-close"></span>
                   </button>
                 </td>
