--- a/apps/Manager/views/login/index.phtml
+++ b/apps/Manager/views/login/index.phtml
@@ -8,7 +8,7 @@
         <div class="alert alert-dismissible hidden" role="alert">
           <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
           <strong id="title"></strong> <br>
-          <span id="descr"></span>
+          <span id="desc"></span>
         </div>
 
         <form action="/login/auth" method="post" accept-charset="utf8"  class="validator-form" novalidate="novalidate">
