--- a/apps/Manager/views/projects/index.phtml
+++ b/apps/Manager/views/projects/index.phtml
@@ -18,13 +18,13 @@
       </div><br>
     </div>
     <div class="col-md-9 col-sm-12">
-      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search ><br>
     </div>
     <div class="col-md-3 col-sm-12">
-      <div class="btn-group flex-center">
-        <button type="button" class="btn btn-default" data-filter="1" >Abertos</button>
-        <button type="button" class="btn btn-default" data-filter="2" >Concluídos</button>
-        <button type="button" class="btn btn-default" data-filter="3" >Cancelados</button>
+      <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-warning" data-filter="1" >Abertos</a>
+        <a role="button" class="btn btn-warning" data-filter="2" >Concluídos</a>
+        <a role="button" class="btn btn-warning" data-filter="3" >Cancelados</a>
       </div>
     </div>
   </div>
