--- a/apps/Manager/views/tasks/index.phtml
+++ b/apps/Manager/views/tasks/index.phtml
@@ -12,12 +12,12 @@
       </div>
     </div>
     <div class="col-md-10 col-sm-12">
-      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search >
+      <input type="text" name="search" class="form-control form-control-circle" placeholder="Filtro" data-search ><br>
     </div>
     <div class="col-md-2 col-sm-12">
-      <div class="btn-group flex-center">
-        <button type="button" class="btn btn-default" data-filter="1" >Abertos</button>
-        <button type="button" class="btn btn-default" data-filter="2" >Concluídos</button>
+      <div class="btn-group btn-group-justified">
+        <a role="button" class="btn btn-warning" data-filter="1" >Abertos</a>
+        <a role="button" class="btn btn-warning" data-filter="2" >Concluídos</a>
       </div>
     </div>
   </div>
