--- a/apps/Manager/views/index.phtml
+++ b/apps/Manager/views/index.phtml
@@ -30,7 +30,7 @@
 
       <div class="user text-center">
             <img src="/assets/manager/images/avtar/<?php echo $uinfo->image; ?>" class="img-circle" alt="...">
-            <h4 class="user-name"><?php echo $uinfo->name; ?></h4>
+            <h4 class="user-name"><?php echo (@$uinfo->name ? @$uinfo->name : @$uinfo->firstname); ?></h4>
 
             <div class="dropdown user-login">
               <a href="/login/logout">
@@ -63,15 +63,13 @@
 
       <?php echo $this->getContent(); ?>
 
-    </section>
-
-    <footer class="container-fluid footer">
-      <div class="container">
+      <footer class="container-fluid footer">
         Copyright &copy; 2016
         <a href="#" target="_blank">Rhino - Project Manager</a>
         <a href="#" class="pull-right scrollToTop"><i class="fa fa-chevron-up"></i></a>
-      </div>
-    </footer>
+      </footer>
+
+    </section>
 
     <?php else:?>
       <?php echo $this->getContent(); ?>
